# Terminal_Chatroom

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  chat_utilities.c  chat_utilities.h  chatutils  client  client.c  client.h  client_exec.c  cserver  cu  server.c  server.h  server_exec.c
test/: CMakeLists.txt  test_chat_utilities.c  test_client.c  test_server.c
